<resources>
    <string name="app_name">BrickMate</string>
    <string name="hint"><font size="14">Enter email address*</font></string>
    <string name="password"><font size="14">Enter password*</font></string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="start_here">Start Here</string>
    <string name="login">Login</string>
    <string name="show_password">Show Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_add_new_customer">ADD NEW CUSTOMER</string>
    <string name="label_new_customer_firstname">Customer Name * :</string>
    <string name="hint_customer_name">Customer name</string>
    <string name="label_new_customer_email">Customer Email* :</string>
    <string name="hint_customer_email">Customer email</string>
    <string name="hint_customer_phone">Customer Phone Number</string>
    <string name="label_new_customer_phone">Customer Phone Number* :</string>
    <string name="label_new_customer_address">Customer Address* :</string>
    <string name="hint_customer_address">Customer Address</string>
    <string name="label_new_customer_gst">GST* :</string>
    <string name="hint_customer_gst_number">Enter GST number here</string>
    <string name="add_new_customer">Add new customer</string>
    <string name="content_description">top_frame</string>
    <string name="title_dashboard">DASHBOARD</string>
    <string name="title_customer_master">CUSTOMER MASTER</string>
    <string name="click_back_again_to_exit">Click back again to exit</string>
    <string name="title_toolbar_product_master">PRODUCT MASTER</string>
    <string name="add_new_product">ADD NEW PRODUCT</string>

</resources>